[gd_scene load_steps=2 format=3 uid="uid://d1i31mdswu88v"]

[ext_resource type="Script" uid="uid://qbsb5akup6d4" path="res://src/ui/admin/AdminLogin.gd" id="1_c2vfk"]

[node name="AdminLogin" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_c2vfk")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.6
anchor_bottom = 0.1
text = "Admin / User Login"
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.2

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.3
text = "Login"

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.8
